--- a/template/docs.stories.mdx
+++ b/template/docs.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import { linkTo } from '@storybook/addon-links';
-import <%= name %> from './<%= name %>/<%= name %>.svelte';
+import <%= name %> from './<%= name %>.svelte';
 
 <Meta title="Overview" component={<%= name %>} />
 
