--- a/template/docs.stories.mdx
+++ b/template/docs.stories.mdx
@@ -22,27 +22,11 @@ npm i <%= packageName %>
 <<%= name %> />
 ```
 
-#### Svelte-preprocess
-
-`<%= packageName %>` is written in Typescript, and requires Svelte's preprocessing to be enabled. If you're using [Sapper](https://sapper.svelte.dev/) this comes enabled by default.
-
-To enable preprocessing, install `svelte-preprocess` and include it in the svelte config in your `rollup.config.js` or `webpack.config.js`
-
-```sh
-npm i svelte-preprocess
-```
-
-```js
-import autoPreprocess from 'svelte-preprocess';
-
-svelte({
-  preprocess: autoPreprocess()
-});
-```
-
-See the [svelte-preprocess docs](https://github.com/sveltejs/svelte-preprocess) for more.
-
 ### Properties
 
-| Property | Description |
-| -------- | ----------- |
+| Property | Type | Default | Description |
+| -------- | ---- | ------- | ----------- |
+
+<% props && props.forEach(prop => { -%>
+| `<%= prop.name %>` | `<%= prop.type %>` | `-` | `<%= prop.description %>` |
+<% }) -%>
